syntax = "proto3";
package protocol;

message TestStruct
{
	int32 a = 1;
}

message C2STestMessage 
{
	int32  				ID     	 		= 1;
}

message S2CTestMessage 
{
	string			sz     	 		= 1;
	int64    		longID 			= 2;
	repeated    	int32         testInts  	= 3;
	repeated	TestStruct 		testStructs	= 4;
}